--- a/DailyLife/App.xaml
+++ b/DailyLife/App.xaml
@@ -2,8 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DailyLife"
+             xmlns:converter="clr-namespace:DailyLife.Converter"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <converter:BackImageConverter x:Key="b2c"/>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
